--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./../assets/img/icon.png">
     <script src="https://kit.fontawesome.com/9d11d30b0e.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="./../assets/css/style.css">
     
     <title>APAPACHO | Contacto</title>
@@ -14,7 +15,7 @@
     <header>
         <div class="main-header">
             <!-- Titulo principal -->
-            <div class="logo">
+            <div class="logo animate__animated animate__zoomIn">
                 <div class="logo-img">
                     <img src="./../assets/img/logo.jpg" alt="Logo Apapacho">
                 </div>
