--- a/pages/encuentranos.html
+++ b/pages/encuentranos.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./../assets/img/icon.png">
     <script src="https://kit.fontawesome.com/9d11d30b0e.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="./../assets/css/style.css">
     <title>APAPACHO | Encuentranos</title>
 </head>
@@ -13,7 +14,7 @@
     <header>
         <div class="main-header">
             <!-- Titulo principal -->
-            <div class="logo">
+            <div class="logo animate__animated animate__zoomIn">
                 <div class="logo-img">
                     <img src="./../assets/img/logo.jpg" alt="Logo Apapacho">
                 </div>
@@ -53,7 +54,7 @@
                     </div>                    
                 </article>
                 <div class="empresas">
-                    <div id="empresa_1" class="empresa">
+                    <div id="empresa_1" class="empresa animate__animated animate__backInUp">
                         <div class="empresa_mapa">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3064.5969392547286!2d-73.24453228499611!3d-39.8160320590019!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9615ee7741a058ad%3A0xb915891a65459b6c!2sMall%20Plaza%20de%20Los%20R%C3%ADos!5e0!3m2!1ses-419!2scl!4v1647825026070!5m2!1ses-419!2scl" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
@@ -73,7 +74,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="empresa_2" class="empresa">
+                    <div id="empresa_2" class="empresa animate__animated animate__backInUp">
                         <div class="empresa_mapa">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3064.5969392547286!2d-73.24453228499611!3d-39.8160320590019!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9615ee7741a058ad%3A0xb915891a65459b6c!2sMall%20Plaza%20de%20Los%20R%C3%ADos!5e0!3m2!1ses-419!2scl!4v1647825026070!5m2!1ses-419!2scl" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
@@ -93,7 +94,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="empresa_3" class="empresa">
+                    <div id="empresa_3" class="empresa animate__animated animate__backInUp">
                         <div class="empresa_mapa">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3064.5969392547286!2d-73.24453228499611!3d-39.8160320590019!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9615ee7741a058ad%3A0xb915891a65459b6c!2sMall%20Plaza%20de%20Los%20R%C3%ADos!5e0!3m2!1ses-419!2scl!4v1647825026070!5m2!1ses-419!2scl" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
