--- a/pages/tallas.html
+++ b/pages/tallas.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./../assets/img/icon.png">
     <script src="https://kit.fontawesome.com/9d11d30b0e.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="./../assets/css/style.css">
     <title>APAPACHO | Tallas</title>
 </head>
@@ -13,7 +14,7 @@
     <header>
         <div class="main-header">
             <!-- Titulo principal -->
-            <div class="logo">
+            <div class="logo animate__animated animate__zoomIn">
                 <div class="logo-img">
                     <img src="./../assets/img/logo.jpg" alt="Logo Apapacho">
                 </div>
@@ -49,7 +50,7 @@
                     <div class="texto_pagina">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum congue eleifend purus, vel sollicitudin ligula tempus vitae. Nam eleifend purus ac nulla pulvinar mattis. Ut posuere, augue sed malesuada auctor, ipsum purus volutpat odio, vehicula venenatis nisi magna non est. Sed in dolor feugiat, eleifend dui sed, tempus turpis. Integer eu nulla commodo, imperdiet tortor sit amet, interdum lectus. Etiam at ultricies justo, et condimentum arcu. Suspendisse eleifend nulla tellus, at placerat augue tincidunt nec. Donec nunc mi, porttitor sit amet aliquet ac, consequat malesuada sem. Donec lacus tortor, cursus sed faucibus non, porttitor id arcu. Pellentesque quis tortor non eros bibendum porttitor.
                     </div>
-                    <div id="talla_cat_1" class="tabla_cat">
+                    <div id="talla_cat_1" class="tabla_cat animate__animated animate__flipInX">
                         <h3>Titulo Categoria 1</h3>
                         <div class="tabla_overflow">
                             <table class="tabla_tallas">
@@ -101,7 +102,7 @@
                             Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
                         </div>
                     </div>
-                    <div id="talla_cat_2" class="tabla_cat">
+                    <div id="talla_cat_2" class="tabla_cat animate__animated animate__flipInX">
                         <h3>Titulo Categoria 2</h3>
                         <div class="tabla_overflow">
                             <table class="tabla_tallas">
