--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./../assets/img/icon.png">
     <script src="https://kit.fontawesome.com/9d11d30b0e.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="./../assets/css/style.css">
+    
     <title>APAPACHO | Tienda</title>
 </head>
 <body>
     <header>
         <div class="main-header">
             <!-- Titulo principal -->
-            <div class="logo">
+            <div class="logo animate__animated animate__zoomIn">
                 <div class="logo-img">
                     <img src="./../assets/img/logo.jpg" alt="Logo Apapacho">
                 </div>
@@ -47,7 +49,7 @@
                 <h2>Tienda</h2>
                 <article>
                     <div class="productos">
-                        <div id="producto_1" class="producto">
+                        <div id="producto_1" class="producto animate__animated animate__flipInX">
                             <div class="producto_imagen">
                                 <img src="./../assets/img/ModeloAmapola.jpg" alt="Modelo Amapola">
                             </div>
@@ -67,7 +69,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div id="producto_2" class="producto">
+                        <div id="producto_2" class="producto animate__animated animate__flipInX">
                             <div class="producto_imagen">
                                 <img src="./../assets/img/ModeloAmaranta.jpg" alt="Modelo Amaranta">
                             </div>
@@ -87,7 +89,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div id="producto_3" class="producto">
+                        <div id="producto_3" class="producto animate__animated animate__flipInX">
                             <div class="producto_imagen">
                                 <img src="./../assets/img/ModeloJacinto.jpg" alt="Modelo Jacinto">
                             </div>
@@ -107,7 +109,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div id="producto_4" class="producto">
+                        <div id="producto_4" class="producto animate__animated animate__flipInX">
                             <div class="producto_imagen">
                                 <img src="./../assets/img/ModeloNomeolvides.jpg" alt="Modelo No me olvides">
                             </div>
@@ -127,7 +129,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div id="producto_5" class="producto">
+                        <div id="producto_5" class="producto animate__animated animate__flipInX">
                             <div class="producto_imagen">
                                 <img src="./../assets/img/ModeloVioleta.jpg" alt="Modelo Violeta">
                             </div>
