--- a/pages/encuentranos.html
+++ b/pages/encuentranos.html
@@ -6,42 +6,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./../assets/img/icon.png">
     <script src="https://kit.fontawesome.com/9d11d30b0e.js" crossorigin="anonymous"></script>
+    <link href="./../assets/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="./../assets/css/style.css">
     <title>APAPACHO | Encuentranos</title>
 </head>
 <body>
     <header>
-        <div class="main-header">
+        <div class="row justify-content-md-center">
             <!-- Titulo principal -->
             <div class="logo animate__animated animate__zoomIn">
                 <div class="logo-img">
-                    <img src="./../assets/img/logo.jpg" alt="Logo Apapacho">
+                    <img class="img-thumbnail" src="./../assets/img/logo.jpg" alt="Logo Apapacho">
                 </div>
                 <div class="logo-header">
                     <h1>APAPACHO</h1>
                     <h2>Diseño Infantil</h2>
-                </div>
+                </div>                   
             </div>
-            <span class="descripcion"><em>"Vestuario hecho a mano para apapachar a quienes amas" </em>&#128157</span>
-            <!-- Menú principal -->
-            <input class="side-menu" type="checkbox" id="side-menu"/>
-            <label class="hamb hamb-menu" for="side-menu"><span class="hamb-line"></span></label>    
-            <nav class="principal-nav">
-                <div class="navbar">
-                    <ul>
-                        <li><a href="./../index.html">Inicio</a></li>
-                        <li><a href="./tienda.html">Tienda</a></li>
-                        <li><a href="./tallas.html">Tallas</a></li>
-                        <li><a href="./quienes-somos.html">¿Quienes Somos?</a></li>
-                        <li><a href="./encuentranos.html" class="active-link">Encuéntranos</a></li>
-                        <li><a href="./contacto.html">Contacto</a></li>
-                    </ul>
+            <span class="descripcion"><em>"Vestuario hecho a mano para apapachar a quienes amas" </em>&#128157</span>                               
+        </div>
+        <div class="row justify-content-md-center menu-fixed">
+            <!-- Menú principal --> 
+            <nav class="principal-nav navbar navbar-expand-lg navbar-light">
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
+                        <ul class="navbar-nav justify-content-center">
+                            <li class="nav-item">
+                                <a href="./../index.html" class="nav-link" aria-current="page">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="./tienda.html" class="nav-link">Tienda</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="./tallas.html" class="nav-link">Tallas</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="./quienes-somos.html" class="nav-link">¿Quienes Somos?</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="./encuentranos.html" class="nav-link active">Encuéntranos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="./contacto.html" class="nav-link">Contacto</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-        
             </nav>
         </div>
-    </header>
+    </header>   
     <main class="paginas">
         <div class="main-section">
             <section>
@@ -54,7 +71,7 @@
                     </div>                    
                 </article>
                 <div class="empresas">
-                    <div id="empresa_1" class="empresa animate__animated animate__backInUp">
+                    <div id="empresa_1" class="empresa animate__animated animate__backInUp text-center">
                         <div class="empresa_mapa">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3064.5969392547286!2d-73.24453228499611!3d-39.8160320590019!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9615ee7741a058ad%3A0xb915891a65459b6c!2sMall%20Plaza%20de%20Los%20R%C3%ADos!5e0!3m2!1ses-419!2scl!4v1647825026070!5m2!1ses-419!2scl" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
@@ -74,7 +91,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="empresa_2" class="empresa animate__animated animate__backInUp">
+                    <div id="empresa_2" class="empresa animate__animated animate__backInUp text-center">
                         <div class="empresa_mapa">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3064.5969392547286!2d-73.24453228499611!3d-39.8160320590019!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9615ee7741a058ad%3A0xb915891a65459b6c!2sMall%20Plaza%20de%20Los%20R%C3%ADos!5e0!3m2!1ses-419!2scl!4v1647825026070!5m2!1ses-419!2scl" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
@@ -94,7 +111,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="empresa_3" class="empresa animate__animated animate__backInUp">
+                    <div id="empresa_3" class="empresa animate__animated animate__backInUp text-center">
                         <div class="empresa_mapa">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3064.5969392547286!2d-73.24453228499611!3d-39.8160320590019!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9615ee7741a058ad%3A0xb915891a65459b6c!2sMall%20Plaza%20de%20Los%20R%C3%ADos!5e0!3m2!1ses-419!2scl!4v1647825026070!5m2!1ses-419!2scl" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
@@ -119,29 +136,37 @@
         </div>        
     </main> 
     <footer>
-        <div id="footer">
-            <div class="footer-section-1">
-                <div class="footer_logo">
+        <div class="container">
+            <div class="row">
+                <div class="col footer_logo text-center">
                     <img src="./../assets/img/Logo_blanco.png" alt="">
                 </div>
-                <div class="footer_rrss">
+                <div class="col footer_rrss text-center">
                     <h3>Síguenos</h3>
                     <span class="footer_rrss_icon"><a href="https://www.facebook.com/Apapacho-dise%C3%B1o-infantil-100137191742080" target="_blank"><i class="fa-brands fa-facebook"></i></a></span>
                     <span class="footer_rrss_icon"><a href="https://www.instagram.com/apapachoval/" target="_blank"><i class="fa-brands fa-instagram"></i></a></span>
                 </div>
-
-                <div class="footer_contacto">
-                    <h3><i class="fa-solid fa-house"></i> Dirección</h3>
-                    <span>General Lagos 1335, Valdivia, Chile</span>
-                    <h3><i class="fa-solid fa-envelope"></i> Correo</h3>
-                    <span><a href="mailto:apapacho@gmail.com" target="_blank"><a href="mailto:apapacho@gmail.com" target="_blank">apapacho@gmail.com</a></a></span>
-                    <h3><i class="fa-brands fa-whatsapp"></i> Télefono</h3>
-                    <span><a href="tel:+56 987654321" target="_blank">+56 987654321</a></span>
+                <div class="col footer_contacto text-center">
+                    <div class="row">
+                        <h3><i class="fa-solid fa-house"></i> Dirección</h3>
+                        <span>General Lagos 1335, Valdivia, Chile</span>
+                    </div>
+                    <div class="row">
+                        <h3><i class="fa-solid fa-envelope"></i> Correo</h3>
+                        <span><a href="mailto:apapacho@gmail.com" target="_blank">apapacho@gmail.com</a></span>
+                    </div>
+                    <div class="row">
+                        <h3><i class="fa-brands fa-whatsapp"></i> Télefono</h3>
+                        <span><a href="tel:+56 987654321" target="_blank">+56 987654321</a></span>
+                    </div>
                 </div>
             </div>
-
         </div>
-        <div class="atribucion">© Copyright 2022 Apapacho | Walter Pineda Ilabaca</div>
-    </footer>
+        <div class="row justify-content-md-center atribucion">
+            © Copyright 2022 Apapacho | Walter Pineda Ilabaca
+        </div>
+    </footer> 
+    <script src="./../assets/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
