--- a/index.html
+++ b/index.html
@@ -80,14 +80,20 @@
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
                 </div>
                 <div class="carousel-inner">
-                  <div class="carousel-item active slide-div" id="slide1">
-                    <div class="tela text-align">
+                    <div class="carousel-item active slide-div" id="slide1">
+                        <div class="tela text-align">
                             <h2>Vestuario hecho a mano para apapachar a quienes amas</h2>
                             <span class="tela-margen"><a href="./pages/tienda.html" class="boton">Visita nuestra tienda <i class="fa-solid fa-store"></i></a></span>
                         </div>
-                    </div>                    
-                  </div>                  
-                </div>
+                    </div>    
+                    <div class="carousel-item slide-div" id="slide2">
+                        <div class="tela text-align">
+                            <h2>Buscanos en nuestros puntos de venta</h2>
+                            <span class="tela-margen"><a href="./pages/encuentranos.html" class="boton">Encuentranos <i class="fa-solid fa-store"></i></a></span>
+                        </div>
+                    </div>                
+                </div>                  
+                
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Previous</span>
