--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active slide-div" id="slide1">
-                        <div class="tela text-align">
-                            <h2>Vestuario hecho a mano para apapachar a quienes amas</h2>
+                        <div class="tela text-align text-center">
+                            <h2 class="tela-margen">Vestuario hecho a mano para apapachar a quienes amas</h2>
                             <span class="tela-margen"><a href="./pages/tienda.html" class="boton">Visita nuestra tienda <i class="fa-solid fa-store"></i></a></span>
                         </div>
                     </div>    
                     <div class="carousel-item slide-div" id="slide2">
                         <div class="tela text-align">
-                            <h2>Buscanos en nuestros puntos de venta</h2>
+                            <h2 class="tela-margen text-center">Buscanos en nuestros puntos de venta</h2>
                             <span class="tela-margen"><a href="./pages/encuentranos.html" class="boton">Encuentranos <i class="fa-solid fa-store"></i></a></span>
                         </div>
                     </div>                
