--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="container-fluid homeGrid">    
-        <header>
+        <header class="shadow-bottom">
             <div class="row justify-content-md-center">
                 <!-- Titulo principal -->
                 <div class="logo animate__animated animate__zoomIn">
@@ -113,7 +113,7 @@
                             </div>
                             <div class="card-body producto_info text-center">
                                 <h5 class="card-title">Poleron Modelo "Amapola"</h5>
-                                <div class="producto_info_precioCompra">
+                                <div class="row producto_info_precioCompra">
                                     <p class="card-text producto_info_precioCompra_precio">
                                         Precio $15.000
                                     </p>
@@ -131,7 +131,7 @@
                             </div>
                             <div class="card-body producto_info text-center">
                                 <h5 class="card-title">Poleron Modelo "Amaranta"</h5>
-                                <div class="producto_info_precioCompra">
+                                <div class="row producto_info_precioCompra">
                                     <p class="card-text producto_info_precioCompra_precio">
                                         Precio $20.000
                                     </p>
@@ -149,7 +149,7 @@
                             </div>
                             <div class="card-body producto_info text-center">
                                 <h5 class="card-title">Poleron Modelo "Jacinto"</h5>
-                                <div class="producto_info_precioCompra">
+                                <div class="row producto_info_precioCompra">
                                     <p class="card-text producto_info_precioCompra_precio">
                                         Precio $10.000
                                     </p>
@@ -167,7 +167,7 @@
                             </div>
                             <div class="card-body producto_info text-center">
                                 <h5 class="card-title">Poleron Modelo "No me olvides"</h5>
-                                <div class="producto_info_precioCompra">
+                                <div class="row producto_info_precioCompra">
                                     <p class="card-text producto_info_precioCompra_precio">
                                         Precio $17.000
                                     </p>
@@ -185,7 +185,7 @@
                             </div>
                             <div class="card-body producto_info text-center">
                                 <h5 class="card-title">Poleron Modelo "Violeta"</h5>
-                                <div class="producto_info_precioCompra">
+                                <div class="row producto_info_precioCompra">
                                     <p class="card-text producto_info_precioCompra_precio">
                                         Precio $17.500
                                     </p>
