--- a/pages/encuentranos.html
+++ b/pages/encuentranos.html
@@ -12,7 +12,7 @@
     <title>APAPACHO | Encuentranos</title>
 </head>
 <body>
-    <header>
+    <header class="shadow-bottom">
         <div class="row justify-content-md-center">
             <!-- Titulo principal -->
             <div class="logo animate__animated animate__zoomIn">
@@ -59,7 +59,7 @@
             </nav>
         </div>
     </header>   
-    <main class="paginas">
+    <main class="row paginas">
         <div class="main-section">
             <section>
                 <article id="encuentranos">
@@ -70,8 +70,8 @@
                         </p>
                     </div>                    
                 </article>
-                <div class="empresas">
-                    <div id="empresa_1" class="empresa animate__animated animate__backInUp text-center">
+                <div class="row empresas">
+                    <div id="empresa_1" class="card empresa animate__animated animate__backInUp text-center">
                         <div class="empresa_mapa">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3064.5969392547286!2d-73.24453228499611!3d-39.8160320590019!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9615ee7741a058ad%3A0xb915891a65459b6c!2sMall%20Plaza%20de%20Los%20R%C3%ADos!5e0!3m2!1ses-419!2scl!4v1647825026070!5m2!1ses-419!2scl" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
@@ -91,7 +91,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="empresa_2" class="empresa animate__animated animate__backInUp text-center">
+                    <div id="empresa_2" class="card empresa animate__animated animate__backInUp text-center">
                         <div class="empresa_mapa">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3064.5969392547286!2d-73.24453228499611!3d-39.8160320590019!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9615ee7741a058ad%3A0xb915891a65459b6c!2sMall%20Plaza%20de%20Los%20R%C3%ADos!5e0!3m2!1ses-419!2scl!4v1647825026070!5m2!1ses-419!2scl" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
@@ -111,7 +111,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="empresa_3" class="empresa animate__animated animate__backInUp text-center">
+                    <div id="empresa_3" class="card empresa animate__animated animate__backInUp text-center">
                         <div class="empresa_mapa">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3064.5969392547286!2d-73.24453228499611!3d-39.8160320590019!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9615ee7741a058ad%3A0xb915891a65459b6c!2sMall%20Plaza%20de%20Los%20R%C3%ADos!5e0!3m2!1ses-419!2scl!4v1647825026070!5m2!1ses-419!2scl" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
