--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -12,7 +12,7 @@
     <title>APAPACHO | Quienes Somos</title>
 </head>
 <body>
-    <header>
+    <header class="shadow-bottom">
         <div class="row justify-content-md-center">
             <!-- Titulo principal -->
             <div class="logo animate__animated animate__zoomIn">
@@ -59,7 +59,7 @@
             </nav>
         </div>
     </header>    
-    <main class="paginas">
+    <main class="row paginas">
         <div class="main-section">
             <section>
                 <article>
