--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -13,7 +13,7 @@
     <title>APAPACHO | Tienda</title>
 </head>
 <body>
-    <header>
+    <header class="shadow-bottom">
         <div class="row justify-content-md-center">
             <!-- Titulo principal -->
             <div class="logo animate__animated animate__zoomIn">
@@ -60,8 +60,8 @@
             </nav>
         </div>
     </header>   
-    <main class="paginas">
-        <div class="main-section-group">
+    <main class="row paginas">
+        <div class="main-section main-section-group">
             <section>
                 <h2>Tienda</h2>
                 <div class="productos">
@@ -72,7 +72,7 @@
                             </div>
                             <div class="card-body producto_info text-center">
                                 <h5 class="card-title">Poleron Modelo "Amapola"</h5>
-                                <div class="producto_info_precioCompra">
+                                <div class="row producto_info_precioCompra">
                                     <p class="card-text producto_info_precioCompra_precio">
                                         Precio $15.000
                                     </p>
@@ -90,7 +90,7 @@
                             </div>
                             <div class="card-body producto_info text-center">
                                 <h5 class="card-title">Poleron Modelo "Amaranta"</h5>
-                                <div class="producto_info_precioCompra">
+                                <div class="row producto_info_precioCompra">
                                     <p class="card-text producto_info_precioCompra_precio">
                                         Precio $20.000
                                     </p>
@@ -108,7 +108,7 @@
                             </div>
                             <div class="card-body producto_info text-center">
                                 <h5 class="card-title">Poleron Modelo "Jacinto"</h5>
-                                <div class="producto_info_precioCompra">
+                                <div class="row producto_info_precioCompra">
                                     <p class="card-text producto_info_precioCompra_precio">
                                         Precio $10.000
                                     </p>
@@ -126,7 +126,7 @@
                             </div>
                             <div class="card-body producto_info text-center">
                                 <h5 class="card-title">Poleron Modelo "No me olvides"</h5>
-                                <div class="producto_info_precioCompra">
+                                <div class="row producto_info_precioCompra">
                                     <p class="card-text producto_info_precioCompra_precio">
                                         Precio $17.000
                                     </p>
@@ -144,7 +144,7 @@
                             </div>
                             <div class="card-body producto_info text-center">
                                 <h5 class="card-title">Poleron Modelo "Violeta"</h5>
-                                <div class="producto_info_precioCompra">
+                                <div class="row producto_info_precioCompra">
                                     <p class="card-text producto_info_precioCompra_precio">
                                         Precio $17.500
                                     </p>
@@ -162,7 +162,7 @@
             <aside>
                 <div id="filtroProductos">
                     <h2>Filtro Productos</h2>
-                    <article>
+                    <article class="row">
                         <ul class="opcionesFiltro">
                             <li>
                                 <h3>Color</h3>
