--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -60,9 +60,9 @@
             </nav>
         </div>
     </header>    
-    <main class="row paginas">
-        <div class="main-section main-section-group">
-            <section>
+    <main class="container paginas">
+        <div class="row">
+            <section class="col-md-9 padding-right">
                 <h2>Contacto</h2>
                 <article>                    
                     <form class="row g-3">
@@ -92,10 +92,10 @@
                     </form>
                 </article>
             </section>
-            <aside>
+            <aside class="col-md-3">
                 <div id="informacionContacto">
                     <h3>Información de Contacto</h3>
-                    <article class="row">
+                    <article class="aside-flex">
                         <span class="info_contacto"><strong><i class="fa-solid fa-envelope"></i> Correo: </strong><a href="mailto:apapacho@gmail.com" target="_blank">apapacho@gmail.com</a></span>
                         <span class="info_contacto"><strong><i class="fa-brands fa-whatsapp"></i> Tel: </strong><a href="tel:+56 987654321" target="_blank">+56 987654321</a></span>
                         <span class="info_contacto"><strong><i class="fa-solid fa-house"></i> Dirección: </strong>General Lagos 1335, Valdivia, Chile</span>
