--- a/pages/encuentranos.html
+++ b/pages/encuentranos.html
@@ -59,9 +59,9 @@
             </nav>
         </div>
     </header>   
-    <main class="row paginas">
-        <div class="main-section">
-            <section>
+    <main class="container paginas">
+        <div class="row">
+            <section class="col-12">
                 <article id="encuentranos">
                     <h2>Encuéntranos</h2>
                     <div class="texto_pagina">
