--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                 </nav>
             </div>
         </header>     
-        <main>
-            <section id="carouselExampleIndicators" class="carousel slide slider_apa" data-bs-ride="carousel">                
+        <main class="row">
+            <section id="carouselExampleIndicators" class="col-12 carousel slide slider_apa" data-bs-ride="carousel">                
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -103,9 +103,9 @@
                   <span class="visually-hidden">Next</span>
                 </button>
             </section>
-            <section id="productos_destacados_parent">
-                <div id="productos_destacados_child">
-                    <h2>Productos Destacados</h2>
+            <section id="productos_destacados" class="col-12">
+                <div>
+                    <h2 class="text-center">Productos Destacados</h2>
                     <div class="row">
                         <div id="producto_1" class="card mb-3 producto animate__animated animate__flipinX">
                             <div class="producto_imagen">
@@ -200,7 +200,7 @@
                     </div>
                 </div>
             </section>
-            <section id="instagram">
+            <section id="instagram" class="col-12">
                 <div class="tela">
                     <div class="row">
                         <div id="instagram_info" class="card">
