--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -59,9 +59,9 @@
             </nav>
         </div>
     </header>    
-    <main class="row paginas">
-        <div class="main-section">
-            <section>
+    <main class="container paginas">
+        <div class="row">
+            <section class="col-12">
                 <article>
                     <h2>Quienes Somos</h2>
                     <div class="texto_pagina">
